# shell-guesser

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md
guesser/: main.c
include/: shell-check.h
shell-check/: shell-check.c
